--- a/MVVM_IMPLENTACION_HACB/Vista/Pagina1.xaml
+++ b/MVVM_IMPLENTACION_HACB/Vista/Pagina1.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVM_IMPLENTACION_HACB.Vista.Pagina1">
+             x:Class="MVVM_IMPLENTACION_HACB.Vista.Pagina1"
+             NavigationPage.HasNavigationBar="False">
     
     <Grid BackgroundColor="Aqua">
         <StackLayout VerticalOptions="Center">
@@ -47,7 +48,13 @@
                    HorizontalOptions="Center"
                    FontAttributes="Bold"
                    FontSize="35"/>
-
+            <Button Text="Ir a página2"
+                    HorizontalOptions="Center"
+                    CornerRadius="5"
+                    BackgroundColor="White"
+                    FontAttributes="Bold"
+                    Command="{Binding PNavegarpagina2command}"
+                    />
         </StackLayout>
     </Grid>
 </ContentPage>
