--- a/MVVM_IMPLENTACION_HACB/Vista/Page2.xaml
+++ b/MVVM_IMPLENTACION_HACB/Vista/Page2.xaml
@@ -14,5 +14,29 @@
                 <TapGestureRecognizer Command="{Binding Volvercommand}"/>
             </Image.GestureRecognizers>
         </Image>
+        <CollectionView  ItemsSource="{Binding MostraUsuarioscommand}"
+                         VerticalOptions="Center"
+                         Margin="20,80,20,0">
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical"
+                                 Span="1"
+                                 VerticalItemSpacing="20"/>
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame CornerRadius="15"
+                           BackgroundColor="#00DE87">
+                        <StackLayout Orientation="Horizontal">
+                            <Image Source="{Binding Imagen}"
+                                   HeightRequest="100"/>
+                            <Label Text="{Binding Nombre}"
+                                   VerticalOptions="Center"
+                                   FontSize="20"
+                                   FontAttributes="Bold"/>
+                        </StackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </Grid>
 </ContentPage>
