--- a/MVVM_IMPLENTACION_HACB/Vista/Page2.xaml
+++ b/MVVM_IMPLENTACION_HACB/Vista/Page2.xaml
@@ -37,7 +37,8 @@
                         </StackLayout>
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding Path=BindingContext.Alertacommand,
-                                Source={x:Reference listauser}}"/>
+                                Source={x:Reference listauser}}"
+                                                  CommandParameter="{Binding .}"/>
                         </Frame.GestureRecognizers>
                     </Frame>
                 </DataTemplate>
